<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp" >

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/status_message"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/state_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/security"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/safety_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/signal_power"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/level_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/link_speed"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/speed_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/ip_address"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/ip_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/mac_address"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/netcard_mac_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>
		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/ap_mac_address"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/ap_mac_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>
		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/wifi"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/netcard_interface_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/netmask"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/mask_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/gateway"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/maskway_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/dns1"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/dns1_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="start|center"
				android:text="@string/dns2"
				android:textSize="13sp" />

			<TextView
				android:id="@+id/dns2_tv"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="13sp" />
		</TableRow>
	</TableLayout>
</ScrollView>

