<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/set_bg_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h_26">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/bsp_update"
            android:textSize="25sp"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/h_100"
        android:src="@drawable/ic_update_refresh"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressbar_id"
                android:max="100"
                style="?android:attr/progressBarStyleHorizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">
            <TextView
                android:id="@+id/download_size"
                android:text="@string/download_size"
                android:gravity="start"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/download_percent"
                android:text="@string/download_percent"
                android:gravity="end"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h_50"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/software_version"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/software_version_id"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firmware_version"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firmware_version_id"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:layout_width="@dimen/w_136"
            android:layout_height="@dimen/h_50"
            android:id="@+id/check_update"
            android:text="@string/update_button"
            android:textSize="20sp"
            android:background="@drawable/sel_button_focus"
            android:textColor="@color/white"
            android:nextFocusDown="@+id/check_update"
            android:nextFocusUp="@+id/update_ed1"
            android:nextFocusRight="@+id/check_update"
            android:nextFocusLeft="@+id/btn_update_id" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_state_id"
            android:text="@string/update_state"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
